--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <button id="nextBtn"></button>
   </div>
 
-  <section class="news"></section>
+  <section class="news">
+    <h2>Nueva sección</h2>
+  </section>
 
   <script src="script.js"></script>
 </body>
